force-app/main/default/objects/Async_Log_Entry__e/Async_Log_Entry__e.object-meta.xml
<CustomObject>
    <description>Async Log Entry Event. Published after commit, decoupling from the transaction.</description>
    <label>Async Log Entry</label>
    <pluralLabel>Async Log Entries</pluralLabel>
</CustomObject>