force-app/main/default/objects/Async_Log_Entry__e/fields/EventLog__c.field-meta.xml
<CustomField>
    <fullName>EventLog__c</fullName>
    <description>Event Log Record Id</description>
    <label>Event Log Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>