force-app/main/default/objects/Async_Log_Entry__e/fields/logMessage__c.field-meta.xml
<CustomField>
    <fullName>logMessage__c</fullName>
    <label>Log Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>