force-app/main/default/objects/Async_Log_Entry__e/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>Single related record Id</description>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>