force-app/main/default/objects/Async_Log_Entry__e/fields/timestamp__c.field-meta.xml
<CustomField>
    <fullName>timestamp__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Time Stamp</label>
    <type>DateTime</type>
</CustomField>