force-app/main/default/objects/Async_Log_Entry__e/fields/user_name__c.field-meta.xml
<CustomField>
    <fullName>user_name__c</fullName>
    <description>Name of executing user.</description>
    <label>User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>